src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwU-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-maximized true\n    open-floating true\n    default-column-width {  }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
